routing changes with all words comp

--- a/src/app/all-words/all-words.component.html
+++ b/src/app/all-words/all-words.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen style="background-color: #c3c8bb">
     <mat-toolbar color="primary" class="custom-toolbar sticky mat-elevation-z5">
-        <button mat-button><span class="material-icons" routerLink="" style="font-size: 45px;">abc</span></button>
+        <button mat-button><span class="material-icons" routerLink="/tool">build</span></button>
         <span style="margin-left: 10px;">VocabCards</span>
         <div class="spacer"></div>
         <span class="middle-text" >1067</span> 
