--- a/src/app/learnt-words/learnt-words.component.html
+++ b/src/app/learnt-words/learnt-words.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen style="background-color: #c3c8bb">
   <mat-toolbar color="primary" class="custom-toolbar sticky mat-elevation-z5">
-      <button mat-button><span class="material-icons" routerLink="" style="font-size: 45px;">abc</span></button>
+      <button mat-button><span class="material-icons" routerLink="/tool" style="font-size: 45px;">abc</span></button>
       <span style="margin-left: 10px;">VocabCards</span>
       <div class="spacer"></div>
       <!-- <button mat-button><span class="material-icons">search</span></button> -->
