--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -44,8 +44,8 @@
           </div>
         </div>
 
-        <button mat-button routerLink="quickreview"><span class="material-icons">bolt</span></button>
-        <button mat-button routerLink="random"><span class="material-icons">shuffle</span></button>
+        <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button>
+        <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button>
         <button mat-button (click)="openSyncDialog()"><span class="material-icons">cloud_sync</span></button>
         <button mat-button><span class="material-icons">person</span></button>
         
