centered letter list

--- a/src/app/letter-list/letter-list.component.css
+++ b/src/app/letter-list/letter-list.component.css
@@ -26,6 +26,7 @@ p{
     gap: 1.875rem;
     align-items: center;
     font-family: "Lato", sans-serif;
+    margin-left: 3.125rem;
     /* width: 100%;     */
 
     /* Updated styles for smaller screens */
