--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -44,6 +44,7 @@
           </div>
         </div>
 
+        <button mat-button routerLink=""><span class="material-icons">view_list</span></button>
         <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button>
         <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button>
         <button mat-button (click)="openSyncDialog()"><span class="material-icons">cloud_sync</span></button>
