handled case when no words filtered from search

--- a/src/app/all-words/all-words.component.css
+++ b/src/app/all-words/all-words.component.css
@@ -137,3 +137,16 @@
   vertical-align: middle;
   text-align: center;
 }
+
+.empty-search-text{
+  width: 12.25rem;
+  height: 6.25rem;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transform: scale(1.2);
+  color: #004D6A;
+}
