--- a/src/app/all-words/all-words.component.html
+++ b/src/app/all-words/all-words.component.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="paginator" *ngIf="loaded && model">
-            <mat-paginator class="paginator"
+            <mat-paginator class="paginator" *ngIf="filteredModel.length > 0"
                 [length]="filteredModel.length"
                 [pageSize]="itemsPerPage"
                 [pageSizeOptions]="[6,15,40, 45, 48, 54, 63, 72, 90]"
@@ -72,5 +72,11 @@
                 showFirstLastButtons
             ></mat-paginator>
       </div>
+
+    <div *ngIf="!filteredModel.length && loaded" class="empty-search-text">
+        <h1><i>No Words Here!</i></h1>
+    </div>
+    
+    
 </div>
 </mat-sidenav-container>
