handled search out of focus

--- a/src/app/all-words/all-words.component.html
+++ b/src/app/all-words/all-words.component.html
@@ -11,6 +11,7 @@
             [(ngModel)]="searchTerm"
             placeholder="Search..."
             (input)="filterCards()"
+            (blur)="toggleSearch()"
           />
         </div>
         <!-- <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button> -->
