--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -12,6 +12,7 @@
             [(ngModel)]="searchTerm"
             placeholder="Search..."
             (input)="filterCards()"
+            (blur)="toggleSearch()"
           />
         </div>
         <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button>
