flex grow for quickrev & home icon navigation

--- a/src/app/learnt-words/learnt-words.component.html
+++ b/src/app/learnt-words/learnt-words.component.html
@@ -5,13 +5,10 @@
       <div class="spacer"></div>
       <!-- <button mat-button><span class="material-icons">search</span></button> -->
       <!-- <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button> -->
+      <button mat-button routerLink=""><span class="material-icons">home</span></button>
       <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button>
       <button mat-button><span class="material-icons">person</span></button>
-  
-  
-      <!-- <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
-      <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
-      <a class="home" mat-flat-button><span class="material-icons" style="color: whitesmoke;">cloud_sync</span></a> --> 
+      
       
   </mat-toolbar>
 
