--- a/src/app/learnt-words/learnt-words.component.css
+++ b/src/app/learnt-words/learnt-words.component.css
@@ -75,7 +75,7 @@ p{
 .card {
     background-color: #FFFEF2;
     width: 150px;
-    height: 65px;
+    min-height: 65px;
     border-radius: 10px;
     margin: 15px;
     display: flex;
@@ -84,6 +84,7 @@ p{
     align-items: center;
     font-size: 18px;
     color:gray;
+    flex-grow: 1.5; 
 }
 
 .definition {
