--- a/src/app/randomword/randomword.component.html
+++ b/src/app/randomword/randomword.component.html
@@ -4,7 +4,7 @@
       <button mat-button><span class="material-icons" routerLink="/tool" style="font-size: 45px;">abc</span></button>
       <span style="margin-left: 10px;">VocabCards</span>
       <div class="spacer"></div>
-      <!-- <button mat-button><span class="material-icons">search</span></button> -->
+      <button mat-button routerLink=""><span class="material-icons">home</span></button>
       <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button>
       <!-- <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button> -->
       <button mat-button><span class="material-icons">person</span></button>
