changing global bg colour

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ html, body {
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 body {
-  background-color: #152238;
+  background-color: #c3c8bb;
 }
 
 /* .background-primary { background-color: #152238; } */
